overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fayaaz-deployment  # Match the name in base/deployment.yaml exactly
  labels:
    app: dev-fayaaz
spec:
  selector:
    matchLabels:
      app: dev-fayaaz
  template:
    metadata:
      labels:
        app: dev-fayaaz
    spec:
      serviceAccountName: dev-fayaaz-app-sa  # Use dev-specific ServiceAccount
      containers:
        - name: dev-fayaaz-container
          image: nginx:latest
