overlays/dev/dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-fayaaz-service
  labels:
    app: dev-fayaaz
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: dev-fayaaz
