overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fayaaz-service-dev
  labels:
    app: fayaaz
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: fayaaz
