overlays/dev/dev-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dev-fayaaz-route
spec:
  to:
    kind: Service
    name: dev-fayaaz-service
  port:
    targetPort: 80
  host: dev-fayaaz.apps.ocp.sfrsm.local
  tls:
    termination: edge
